@@ -1,3 +1,9 @@
+2001-01-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* core/overview.cpp: Added resampling type of AVERAGE_MP to do
+	magnitude preserving averaging.  New functions include
+	GDALComputeBandStats() to get mean and standard deviation.
+
 2001-01-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogr/ogr_srs_esri.cpp: added Transverse Mercator .prj support.
